--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "Mint Page",
-  "name": "Mint Page",
+  "short_name": "Raffle Page",
+  "name": "Raffle Page",
   "icons": [
     {
-      "src": "logo.jpg",
+      "src": "logo.png",
       "type": "image/jpg",
       "sizes": "358x358"
     }
