switched to devnet

--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
-REACT_APP_CANDY_MACHINE_ID_SILVER=EYyx6pXHeiVfJg7ytMfRDKC1QxLzLJLPNt9gAtQunruT
-REACT_APP_CANDY_MACHINE_ID_GOLD=FZjrtYTXxyYLLLpRGcqexQ6972KQvd5MWv2Sf6jUyLkw
-REACT_APP_CANDY_MACHINE_ID_MEDALLION=HzbPZp7rr7e1YzNQ6KfaiLcvsngGuZzX7DxZDTxZGFJh
-REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://api.devnet.solana.com
+REACT_APP_CANDY_MACHINE_ID_SILVER=4WfE3MaECpPqCzf8a2jBabv1UaW2Lpnj8SySNcsNKGH4
+REACT_APP_CANDY_MACHINE_ID_GOLD=3Wo1WEFyNgeyUN3kcsasPK8E1hZUjDTzDH52aF43fNWA
+REACT_APP_CANDY_MACHINE_ID_MEDALLION=6yfZj9y9KoRBeaypV3uK3uRH3cJwsmXKPoWWnrRepHrA
+REACT_APP_SOLANA_NETWORK=mainnet-beta
+REACT_APP_SOLANA_RPC_HOST=https://api.mainnet-beta.solana.com
 
 
 # ADDITIONAL PARAMS TO SET IF USING SPL-TOKEN AS MINTING CURRENCY ONLY :
 
 # Spl-Token symbol to display next the price
-REACT_APP_SPL_TOKEN_TO_MINT_NAME=3WYAz14XKh9XfFC75sLJTonL4H6aLmGbB3LhuLVvXip9
+REACT_APP_SPL_TOKEN_TO_MINT_NAME=FDrvNJHhLPMCrRe3oPzkXi3ug3S5dQ84hYAGUTjyjrqQ
 
 # Spl-token decimals place defined on creation (default is 9)
-REACT_APP_SPL_TOKEN_TO_MINT_DECIMALS=0
+REACT_APP_SPL_TOKEN_TO_MINT_DECIMALS=6
