--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-is": "17.0.2",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.5.5",
