--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_CANDY_MACHINE_ID_SILVER=4WfE3MaECpPqCzf8a2jBabv1UaW2Lpnj8SySNcsNKGH4
-REACT_APP_CANDY_MACHINE_ID_GOLD=3Wo1WEFyNgeyUN3kcsasPK8E1hZUjDTzDH52aF43fNWA
-REACT_APP_CANDY_MACHINE_ID_MEDALLION=6yfZj9y9KoRBeaypV3uK3uRH3cJwsmXKPoWWnrRepHrA
+REACT_APP_CANDY_MACHINE_ID_SILVER=E8XsQgJ1Fr1Gbs27W2Yz6Sb4Q7fJMVMHuTrXQubdVtac
+#REACT_APP_CANDY_MACHINE_ID_GOLD=3Wo1WEFyNgeyUN3kcsasPK8E1hZUjDTzDH52aF43fNWA
+#REACT_APP_CANDY_MACHINE_ID_MEDALLION=6yfZj9y9KoRBeaypV3uK3uRH3cJwsmXKPoWWnrRepHrA
 REACT_APP_SOLANA_NETWORK=mainnet-beta
 REACT_APP_SOLANA_RPC_HOST=https://api.mainnet-beta.solana.com
 
